[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaosfs"
version = "0.2.1"
description = "Eventually-consistent local harness that exercises NFS-like race conditions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fusepy>=3.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
]

[project.scripts]
chaosfs = "chaosfs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["fs", "mnt", "logs", "runtime"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
